# RAG-Ingestion-Parsing-Techniques

./: README.md  pyproject.toml
0-DataIngestParsing/: 2-dataparsingpdf.ipynb  3-dataparsingdoc.ipynb  5-jsonparsing.ipynb  6-databaseparsing.ipynb
0-DataIngestParsing/data/databases/: company.db
Data parsing techniques/: README.md  pyproject.toml  requirements.txt
Data parsing techniques/0-DataIngestParsing/: 1-dataingestion.ipynb  4-csvexcelparsing.ipynb  RAG.code-workspace
Data parsing techniques/0-DataIngestParsing/data/structured_files/: inventory.xlsx
Data parsing techniques/1-VectorEmbedding/: openaiembeddings.ipynb
Data parsing techniques/10-RAG Evaluation/: 1-rag_evaluation.ipynb
Data parsing techniques/3-AdvancedChunking/: 1-semanticChunking.ipynb
Data parsing techniques/4-Hybrid search strategies.ipynb/: 1-densesparse.ipynb  3-mmr.ipynb
Data parsing techniques/5-Query Enhancement Techniques/: 1-queryexpansion.ipynb  2-querydecomposition.ipynb  3-HyDE.ipynb
Data parsing techniques/6-multimodalRAG/: 1-multimodalopenai.ipynb
Data parsing techniques/7-Agentic Rag/: 1-agenticrag.ipynb  2-ReAct.ipynb  3-COTRag.ipynb  4-Selfreflection.ipynb  5-QueryPlanningdecomposition.ipynb  6-Iterativeretrieval.ipynb  8-multiagent.ipynb
Data parsing techniques/8-Rags/: 2-CorrectiveRAG.ipynb  4-AdaptiveRAG.ipynb
